[package]
name = "woodns"
version = "2.0.0"
edition = "2024"

[profile.release]
lto="fat"
codegen-units=1
panic="abort"
strip=true

[dependencies]
anyhow = "1.0.98"
bollard = "0.19.1"
tokio = { version = "1.46.1", features = ["full"] }
trust-dns-proto = "0.23.2"
futures-util = "0.3"
log = "0.4.27"
chrono = { version = "0.4", features = ["clock"] }